Completed ComputerScreen.java and connected it to ComputerBlock. Added all the neccessary packets to use the screen. Added some extra functionality over signals in the computer.